Fixed a bug that allowed Enlisted characters to select Executive Officer role.

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -61,10 +61,13 @@
     <div id="dialog"></div>
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
-        <div class="dialog-container dialog-container-visible">
+        <div class="dialog-container dialog-container-visible" style="text-align:left;">
             <b>WHAT'S NEW?</b>
-            <br /><br/>
-            - XX
+            <br /><br />
+            <ul>
+                <li>Fixed a bug that allowed Young Officers to be able to select Commanding Officer role.</li>
+                <li>Fixed a bug that allowed Enlisted characters to select Executive Officer role.</li>
+            </ul>
             <div class="button-container-centered">
                 <div class="button" onclick="showNews();">
                     OK
