Added borg implant selection.

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -67,6 +67,7 @@
             <ul>
                 <li>Fixed a bug that allowed Young Officers to be able to select Commanding Officer role.</li>
                 <li>Fixed a bug that allowed Enlisted characters to select Executive Officer role.</li>
+                <li>Liberated Borg is now available as a species.</li>
             </ul>
             <div class="button-container-centered">
                 <div class="button" onclick="showNews();">
