- support slightly more functionality on the standard character sheet, including stress and traits; - dial up the version number and update the news pop-up

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -65,6 +65,8 @@
             <b>WHAT'S NEW?</b>
             <br /><br />
             <ul>
+                <li>Added a new type of support for character sheets. At the moment, that support is limited to the Supporting Characters path 
+                    while the kinks are being worked out. Eventually, this will be used to support Klingon character sheets.</li>
                 <li>Basic support for the Multi-Discipline talent has been added.</li>
                 <li>Added support for Klingon character generation.</li>
                 <li>Revisions have been made to the talent list to make it easier to see the complete list of talents.</li>
