--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,8 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW?</b>
-            <br /><br />
+            <b>WHAT'S NEW? (v1.210917)</b>
+            <ul>
+                <li>Added support for the Shakleton Expanse book (new species and Talents).</li>
+            </ul>
+            <b>v1.210908</b>
             <ul>
                 <li>Added support for Klingon character generation.</li>
                 <li>Revisions have been made to the talent list to make it easier to see the complete list of talents.</li>
