add an option for TOS-styled character sheets

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,12 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.210917)</b>
+            <b>WHAT'S NEW? (v1.210918)</b>
+            <ul>
+                <li>Support for TOS character sheets.</li>
+                <li>Fixed a bug on the supporting character while trying to export to PDF.</li>
+            </ul>
+            <b>v1.210917</b>
             <ul>
                 <li>Added support for the Shakleton Expanse book (new species and Talents).</li>
             </ul>
