- restore the list of weapons to the character sheets; - tweak the character sheets a bit

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -66,6 +66,7 @@
             <ul>
                 <li>Support for TOS character sheets.</li>
                 <li>Fixed a bug on the supporting character while trying to export to PDF.</li>
+                <li>Restore the weapons list to the exported PDF</li>
             </ul>
             <b>v1.210917</b>
             <ul>
