more character sheet refinement; - better support for Klingon supporting characters

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -67,6 +67,7 @@
                 <li>Support for TOS character sheets.</li>
                 <li>Fixed a bug on the supporting character while trying to export to PDF.</li>
                 <li>Restore the weapons list to the exported PDF</li>
+                <li>Better support for Klingon supporting characters.</li>
             </ul>
             <b>v1.210917</b>
             <ul>
@@ -155,7 +156,7 @@
         }
 
         function feedback() {
-            const url = "https://goo.gl/forms/z8eOMDViQYig8FM73";
+            const url = "https://github.com/bcholmes/StarTrek2d20/discussions";
             const win = window.open(url, "_blank");
             if (win) {
                 win.focus();
