--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.210918)</b>
+            <b>WHAT'S NEW? (v1.210922)</b>
+            <ul>
+                <li>Bug fix: re-tool the starship PDF generation, because the original site is offline.</li>
+            </ul>
+            <b>v1.210918</b>
             <ul>
                 <li>Support for TOS character sheets.</li>
                 <li>Fixed a bug on the supporting character while trying to export to PDF.</li>
