- fix history navigation bug per bcholmes#2; - fix rank field name on supporting character sheet; - version number and news updates

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.210922)</b>
+            <b>WHAT'S NEW? (v1.210927)</b>
+            <ul>
+                <li>Bug fix: The app would stop working if you tried to use the History widget to navigate to an earlier page.</li>
+            </ul>
+            <b>v1.210922</b>
             <ul>
                 <li>Bug fix: re-tool the starship PDF generation, because the original site is offline.</li>
             </ul>
@@ -85,12 +89,6 @@
                 <li>Added support for Klingon character generation.</li>
                 <li>Revisions have been made to the talent list to make it easier to see the complete list of talents.</li>
                 <li>A bug has been fixed on the character creation relating to characters who have more then the maximum value in an attribute.</li>
-            </ul>
-            <b>Earlier Updates</b>
-            <ul>
-                <li>Fixed a bug that allowed Young Officers to be able to select Commanding Officer role.</li>
-                <li>Fixed a bug that allowed Enlisted characters to select Executive Officer role.</li>
-                <li>Liberated Borg is now available as a species.</li>
             </ul>
             <div class="button-container-centered">
                 <div class="button" onclick="showNews();">
