--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.210927)</b>
+            <b>WHAT'S NEW? (v1.211002)</b>
+            <ul>
+                <li>Initial support for Klingon spaceframes / starships.</li>
+            </ul>
+            <b>v1.210927</b>
             <ul>
                 <li>Bug fix: The app would stop working if you tried to use the History widget to navigate to an earlier page.</li>
             </ul>
