per bcholmes#4, ensure that Resolute is factored into the Stress calculation; - minor look and feel adjustments on various character sheets

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.211002)</b>
+            <b>WHAT'S NEW? (v1.211003)</b>
+            <ul>
+                <li>Bug fix: The Resolute talent wasn't being factored into the Stress calculation.</li>
+            </ul>
+            <b>v1.211002</b>
             <ul>
                 <li>Initial support for Klingon spaceframes / starships.</li>
             </ul>
