- minor bug fixes for bcholmes#5 and bcholmes#6

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -87,7 +87,7 @@
             </ul>
             <b>v1.210917</b>
             <ul>
-                <li>Added support for the Shakleton Expanse book (new species and Talents).</li>
+                <li>Added support for the Shackleton Expanse book (new species and Talents).</li>
             </ul>
             <b>v1.210908</b>
             <ul>
