Per bcholmes#5 - Shackleton is misspelled. Well that's embarassing.

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -64,7 +64,7 @@
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
             <b>WHAT'S NEW? (v1.210917)</b>
             <ul>
-                <li>Added support for the Shakleton Expanse book (new species and Talents).</li>
+                <li>Added support for the Shackleton Expanse book (new species and Talents).</li>
             </ul>
             <b>v1.210908</b>
             <ul>
