update notes and version number

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,14 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.211003)</b>
+            <b>WHAT'S NEW? (v1.211008)</b>
+            <ul>
+                <li>Incorporate the IDW Year Five Sourcebook</li>
+                <li>Bug fixes: Some minor bugs have been fixed (if you choose Homeworld as the environment, it would be blank on the character
+                    sheet, and the damage calculation for phasers was slightly off.
+                </li>
+            </ul>
+            <b>v1.211003</b>
             <ul>
                 <li>Bug fix: The Resolute talent wasn't being factored into the Stress calculation.</li>
             </ul>
