- more spaceframe outlines; - update release notes

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,11 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.211008)</b>
+            <b>WHAT'S NEW? (v1.211016)</b>
+            <ul>
+                <li>I'm experimenting with revisions to the Starship character sheet. You probably won't notice any difference.</li>
+            </ul>
+            <b>v1.211008</b>
             <ul>
                 <li>Incorporate the IDW Year Five Sourcebook</li>
                 <li>Bug fixes: Some minor bugs have been fixed (if you choose Homeworld as the environment, it would be blank on the character
