per bcholmes#7, we should specify whether the character accepted/rejected their upbringing (new update)

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -65,6 +65,8 @@
             <b>WHAT'S NEW? (v1.211016)</b>
             <ul>
                 <li>I'm experimenting with revisions to the Starship character sheet. You probably won't notice any difference.</li>
+                <li><a href="https://github.com/bcholmes/StarTrek2d20/issues/7" target="_blank" rel="noreferrer">Bug:</a> 
+                    retore the accept/reject indicator on character sheets.</li>
             </ul>
             <b>v1.211008</b>
             <ul>
