- bug bcholmes#10 : add Augmented trait when the character has an Augmented Ability talent

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,7 +62,12 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.211016)</b>
+            <b>WHAT'S NEW? (v1.211018)</b>
+            <ul>
+                <li><a href="https://github.com/bcholmes/StarTrek2d20/issues/10" target="_blank" rel="noreferrer">Bug:</a> 
+                    Automatically add the 'Augmented' trait when the character has an Augmented Ability talent.</li>
+            </ul>
+            <b>v1.211016</b>
             <ul>
                 <li>I'm experimenting with revisions to the Starship character sheet. You probably won't notice any difference.</li>
                 <li><a href="https://github.com/bcholmes/StarTrek2d20/issues/7" target="_blank" rel="noreferrer">Bug:</a> 
