- add spaceframe outlines for the Olympic and Sydney classes; - minor Klingon spaceframe data fixes; - allow Klingon Warriors that are non-Klingon races

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -62,9 +62,15 @@
     <div id="news" class="dialog-hidden">
         <div class="dialog-bg"></div>
         <div class="dialog-container dialog-container-visible" style="text-align:left;">
-            <b>WHAT'S NEW? (v1.211018)</b>
+            <b>WHAT'S NEW? (v1.211022)</b>
             <ul>
-                <li><a href="https://github.com/bcholmes/StarTrek2d20/issues/10" target="_blank" rel="noreferrer">Bug:</a> 
+                <li>Enhancement: add support for more ship outlines (notably the Olympic and Sydney class).</li>
+                <li>Bug: Data corrections for Klingon spaceframes.</li>
+                <li>Enhancement: Allow users to specify non-Klingon races when creating Klingon Warrior characters.</li>
+            </ul>
+            <b>v1.211018</b>
+            <ul>
+                <li><a href="https://github.com/bcholmes/StarTrek2d20/issues/10" target="_blank" rel="noreferrer">Enhancement:</a> 
                     Automatically add the 'Augmented' trait when the character has an Augmented Ability talent.</li>
             </ul>
             <b>v1.211016</b>
@@ -106,15 +112,6 @@
             <b>v1.210917</b>
             <ul>
                 <li>Added support for the Shackleton Expanse book (new species and Talents).</li>
-            </ul>
-            <b>v1.210908</b>
-            <ul>
-                <li>Added a new type of support for character sheets. At the moment, that support is limited to the Supporting Characters path 
-                    while the kinks are being worked out. Eventually, this will be used to support Klingon character sheets.</li>
-                <li>Support for the Multi-Discipline talent has been added.</li>
-                <li>Added support for Klingon character generation.</li>
-                <li>Revisions have been made to the talent list to make it easier to see the complete list of talents.</li>
-                <li>A bug has been fixed on the character creation relating to characters who have more then the maximum value in an attribute.</li>
             </ul>
             <div class="button-container-centered">
                 <div class="button" onclick="showNews();">
