--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -4,7 +4,7 @@
     <title>STAR TREK Adventures</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <script src="./js/download.min.js"></script>
+    <script src="./static/js/download.min.js"></script>
 
     
 </head>
