Add some <noscript> text for the Tor users; fix some minor bugs relating to changing, e.g. service year after creating a custom frame and calculating the dice amount for Tractor Beams

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -1,14 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>STAR TREK Adventures</title>
+    <title>STAR TREK Adventures Character Creator</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="An application that you can use to create characters and ships for Modiphius' Star Trek Adventures RPG.">
     <script src="./static/js/download.min.js"></script>
 
     
 </head>
 <body onload="setupGuard();">
+    <noscript>
+        <p>This website is a nifty tool that helps you create characters for Star Trek Adventures RPG by Modiphius. But you need to enable JavaScript to run this app.</p>
+        
+        <p>If you don't want want to turn on JavaScript, okay, I get that. But you'll have to use the telepathically-enabled version instead. Beam your ideas of your
+        character directly at your browser, and our cadre of Betazoid character creation representatives will try to receive your telepathic broadcasts and 
+        record them for you. There's a greater likelihood of success if you're a Vulcan of a Napean. Otherwise... well, we're not going to lie: there's only a small 
+        chance that the telepathic broadcast will be received.</p>
+    </noscript>
     <div id="mainBody"></div>
 
     <script>
