revisions to Starship sheet

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -11,9 +11,9 @@
 </head>
 <body onload="setupGuard();">
     <noscript>
-        <p>This website is a nifty tool that helps you create characters for Star Trek Adventures RPG by Modiphius. But you need to enable JavaScript to run this app.</p>
+        <p style="color: white; font-size: 16px;">This website is a nifty tool that helps you create characters for Star Trek Adventures RPG by Modiphius. But you need to enable JavaScript to run this app.</p>
         
-        <p>If you don't want want to turn on JavaScript, okay, I get that. But you'll have to use the telepathically-enabled version instead. Beam your ideas of your
+        <p style="color: white; font-size: 16px;">If you don't want want to turn on JavaScript, okay, I get that. But you'll have to use the telepathically-enabled version instead. Beam your ideas of your
         character directly at your browser, and our cadre of Betazoid character creation representatives will try to receive your telepathic broadcasts and 
         record them for you. There's a greater likelihood of success if you're a Vulcan of a Napean. Otherwise... well, we're not going to lie: there's only a small 
         chance that the telepathic broadcast will be received.</p>
