Per bcholmes#21, fix typo in the 'Javascript not enabled' message

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -15,7 +15,7 @@
         
         <p style="color: white; font-size: 16px;">If you don't want want to turn on JavaScript, okay, I get that. But you'll have to use the telepathically-enabled version instead. Beam your ideas of your
         character directly at your browser, and our cadre of Betazoid character creation representatives will try to receive your telepathic broadcasts and 
-        record them for you. There's a greater likelihood of success if you're a Vulcan of a Napean. Otherwise... well, we're not going to lie: there's only a small 
+        record them for you. There's a greater likelihood of success if you're a Vulcan or a Napean. Otherwise... well, we're not going to lie: there's only a small 
         chance that the telepathic broadcast will be received.</p>
     </noscript>
     <div id="mainBody"></div>
