--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="An application that you can use to create characters and ships for Modiphius' Star Trek Adventures RPG.">
+    <meta property="og:title" content="The Star Trek Adventures Character Creator" />
+    <meta property="og:description" content="An application that you can use to create characters and ships for Modiphius' Star Trek Adventures RPG." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/static/img/bannerImage.png" />
+    <meta property="og:url" content="https://sta.bcholmes.org" />
+
     <script src="./static/js/download.min.js"></script>
 
 
