chase down some bugs and warnings

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -4,9 +4,9 @@
     <title>STAR TREK Adventures Character Creator</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="An application that you can use to create characters and ships for Modiphius' Star Trek Adventures RPG.">
+    <meta name="description" content="A free application that you can use to create characters, ships, and tokens for Modiphius' Star Trek Adventures RPG (and the Captain's Log Solo RPG game).">
     <meta property="og:title" content="The Star Trek Adventures Character Creator" />
-    <meta property="og:description" content="An application that you can use to create characters and ships for Modiphius' Star Trek Adventures RPG." />
+    <meta property="og:description" content="A free application that you can use to create characters, ships, and tokens for Modiphius' Star Trek Adventures RPG (and the Captain's Log Solo RPG game)." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/static/img/bannerImage.png" />
     <meta property="og:url" content="https://sta.bcholmes.org" />
