initial support for tables; minor revisions needed to support more complex URLs

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="/static/img/bannerImage.png" />
     <meta property="og:url" content="https://sta.bcholmes.org" />
 
-    <script src="./static/js/download.min.js"></script>
+    <script src="/static/js/download.min.js"></script>
 
 
 </head>
