Additional revisions to table functions; - tweaks to the handling of Open Graph and header information; - additional test for name generation; - add more talents to translation

--- a/WebTools/public/index.html
+++ b/WebTools/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
     <meta name="description" content="A free application that you can use to create characters, ships, and tokens for Modiphius' Star Trek Adventures RPG (and the Captain's Log Solo RPG game).">
-    <meta property="og:title" content="The Star Trek Adventures Character Creator" />
-    <meta property="og:description" content="A free application that you can use to create characters, ships, and tokens for Modiphius' Star Trek Adventures RPG (and the Captain's Log Solo RPG game)." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/static/img/bannerImage.png" />
-    <meta property="og:url" content="https://sta.bcholmes.org" />
+    <meta property="og:title" content="The Star Trek Adventures Character Creator" data-react-helmet="true"/>
+    <meta property="og:description" content="A free application that you can use to create characters, ships, and tokens for Modiphius' Star Trek Adventures RPG (and the Captain's Log Solo RPG game)." data-react-helmet="true"/>
+    <meta property="og:type" content="website" data-react-helmet="true"/>
+    <meta property="og:image" content="/static/img/bannerImage.png" data-react-helmet="true"/>
+    <meta property="og:url" content="https://sta.bcholmes.org" data-react-helmet="true"/>
 
     <script src="/static/js/download.min.js"></script>
 
